FIX: 7nth request type align

--- a/www/sites/all/themes/emindhub/less/content/type_request.less
+++ b/www/sites/all/themes/emindhub/less/content/type_request.less
@@ -187,7 +187,7 @@ body.node-type-request.page-node-edit {
         > div {
           .make-sm-column(4);
 
-          &:last-child {
+          &:last-child:nth-of-type(7) {
             @media (min-width: @screen-sm-min) {
               margin-left: 33.33%;
             }
